--- a/index.html
+++ b/index.html
@@ -5,8 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Document</title>
+    <h1>Hi!</h1>
 </head>
 <body>
-    
+    <p>Hello World</p>
 </body>
 </html>
